理論の章の入出力電圧測定まで完了

--- a/BasicExperiment/4_logicCircuit/4_logicCircuit.tex
+++ b/BasicExperiment/4_logicCircuit/4_logicCircuit.tex
@@ -15,10 +15,38 @@
 \maketitle
 
 \section{目的}
-論理回路の基本的な動作を理解し、組み合わせ回路の設計方法を習得する。
+ディジタルシステムを構成する論理回路について，組み合わせ回路，順序回路の動作と設計法・実装法の実習，論理素子の動作の理解．
 
 \section{理論}
-% 理論部分は実際の実験内容に応じて記述
+\subsection{ディジタル信号処理と論理素子}
+ディジタル信号処理を行うデバイスは多岐にわたるが，その主要部分は論理回路である．
+つまり，二値論理とそれを実行する論理素子からなる．
+論理素子の実態は電磁リレーや真空管ｋバイポーラトランジスタなどの連続した入出力特性を持つスイッチング回路である．
+そして，素子ごとに固有の電気的，時間的特性を持つ．
+このため，高速な動作を行うディジタル信号処理回路を設計・作製するためにはこれらの特性を考慮する必要がある．
+
+\subsection{論理素子(CMOS)の特性}
+\subsubsection{動作電圧範囲(最大定格，推奨動作条件)}
+ディジタルICにはIC毎に決まった動作保証に関する電気的条件がある．
+これは，電源電圧，動作周波数，動作温度範囲などがある．
+その条件を満足するように使う必要がある．
+
+\noindent 絶対最大定格：端子に印加できる最大の電圧，あるいは流すことができる最大の電流．
+これはICの破壊を防ぐために必ず守らなければならない．
+
+\noindent 推奨動作条件：ICが正常に動作するための電気的条件．
+これは，ICの性能を最大限に引き出すために守るべき条件である．
+
+\subsubsection{入出力電圧特性(${V_{OH}, V_{OL}, V_{IH}, V_{IL}}$)}
+ディジタルICはアナログ値を持つ入出力電圧が，高レベルか低レベルかを判定して信号処理を行う．
+\begin{itemize}
+  \item ${V_{OH}}$：出力ハイレベル電圧
+  \item ${V_{OL}}$：出力ローレベル電圧
+  \item ${V_{IH}}$：入力ハイレベル電圧
+  \item ${V_{IL}}$：入力ローレベル電圧
+\end{itemize}
+
+
 
 \section{使用器具}
 \begin{itemize}
