理論の章を書き終えた

--- a/BasicExperiment/4_logicCircuit/4_logicCircuit.tex
+++ b/BasicExperiment/4_logicCircuit/4_logicCircuit.tex
@@ -46,6 +46,17 @@
   \item ${V_{IL}}$：入力ローレベル電圧
 \end{itemize}
 
+\subsubsection{伝搬遅延時間}
+伝搬遅延時間とは入力状態に変化を加えた場合，出力状態が変化するのにかかる時間を表す特性である．
+\begin{itemize}
+  \item ${t_{PLH}}$：ローレベルからハイレベルへの伝搬遅延時間
+  \item ${t_{PHL}}$：ハイレベルからローレベルへの伝搬遅延時間
+  \item ${t_{pd}}$：${t_{PLH}}$と${t_{PHL}}$の平均
+\end{itemize}
+
+\subsubsection{ファンアウト}
+ファンアウトとは，ある素子が特性を満たす範囲で駆動できる同一の素子の数を表す．
+ファンアウトが大きいほど，多くの素子を駆動できるが，伝搬遅延時間が大きくなる．
 
 
 \section{使用器具}
