使用器具の章を作成

--- a/BasicExperiment/4_logicCircuit/4_logicCircuit.tex
+++ b/BasicExperiment/4_logicCircuit/4_logicCircuit.tex
@@ -61,11 +61,14 @@
 
 \section{使用器具}
 \begin{itemize}
-  \item ブレッドボード
-  \item LED
-  \item 抵抗
-  \item 論理ICチップ
-  \item ジャンパーワイヤー
+  \item LED: 4個
+  \item ジャンプワイヤ: 一式
+  \item 抵抗器(330 $\Omega$): 4個，(1 k$\Omega$): 4個
+  \item コンデンサ(470 nF): 3個，(4.7 $\mu$F): 3個
+  \item タクトスイッチ: 1個
+  \item Dフリップフロップ IC (TC74AC74P, Toshiba): 1個
+  \item 2入力論理和 IC (TC74HC08AP, Toshiba): 1個
+  \item インバータ IC (TC74HC14AP, Toshiba): 1個
 \end{itemize}
 
 \section{実験}
