ROE分解を行った

--- a/test/test.tex
+++ b/test/test.tex
@@ -8,10 +8,166 @@
 \author{Taro Meidai}
 \maketitle
 \section{はじめての\TeX がLua\TeX なんて粋だね}
-%\section{はじめての\TeXがLua\TeXなんて粋だね}
+はい、承知いたしました。定期試験の予想問題を作成します。解答は最後にまとめて記載します。
 
-%こうやって文字を打ちます。
-\subsection{小見出し！}
-あたり前過ぎて気に止めることもないですが、きとんと改行命令を出していなくても自動で改行します。
-\\あ、ギリ改行されなかったか。
+## 定期試験 予想問題
+
+### 1. フーリエ変換
+
+以下の問いに答えなさい:
+
+(a) 任意の信号 $x(t)$ のフーリエ変換を $X(\omega) = \mathcal{F}[x(t)] = \int_{-\infty}^{\infty} x(t)e^{-j\omega t} dt$ とするとき、以下の性質が成立することを証明しなさい。ただし、$t_0$, $\omega_0$ は定数とし、$x^*$ は $x$ の複素共役を表すものとします。
+    *   $x(t - t_0)$ のフーリエ変換は $X(\omega)e^{-j\omega t_0}$ である.
+    *   $x(t)e^{j\omega_0 t}$ のフーリエ変換は $X(\omega - \omega_0)$ である.
+    *   $\mathcal{F}[x(t)\cos(\omega_0 t)] = \frac{1}{2}(X(\omega + \omega_0) + X(\omega - \omega_0))$.
+    *   $x(t)$ が実数のとき、$X(\omega) = X^*(-\omega)$ が成り立つ.
+    *   $x(t)$ が偶関数ならば、$X(\omega)$ も偶関数である (偶関数とは $x(t) = x(-t)$ を満たす関数のこと).
+
+(b) 次の関数のフーリエ変換を求めなさい。$T$ は定数であり、$\omega_0 = \frac{2\pi}{T}$ とします.
+    *   $x(t) = \begin{cases} -1 & -\frac{T}{2} < t < -\frac{T}{4} \\ 1 & -\frac{T}{4} < t < \frac{T}{4} \\ -1 & \frac{T}{4} < t < \frac{T}{2} \\ 0 & \text{それ以外} \end{cases}$
+    *   $x(t) = \begin{cases} \sin(\omega_0 t) & -\frac{T}{2} < t < \frac{T}{2} \\ 0 & \text{それ以外} \end{cases}$
+    *   $x(t) = \begin{cases} t & -\frac{T}{2} < t < \frac{T}{2} \\ 0 & \text{それ以外} \end{cases}$
+
+### 2. ラプラス変換
+
+以下の問いに答えなさい：
+
+(a) 次の関数のラプラス変換を求めなさい:
+    *   $x_1(t) = \begin{cases} e^{-at} & t \ge 0 \\ 0 & t < 0 \end{cases}$  ただし、$a$ は正の定数とする。
+    *   $x_2(t) = \begin{cases} 1 & 0 \le t < T \\ 0 & \text{それ以外} \end{cases}$ ただし、$T$ は正の定数とする。
+    *  $x_3(t) = \begin{cases} 1-t & 0 \le t < 1 \\ 0 & \text{それ以外} \end{cases}$
+(b) 次の関数の逆ラプラス変換を求めなさい。ただし、$T$ は正の定数とする:
+    *  $\frac{3}{s(s+3)}$
+    *   $\frac{1}{s}e^{-sT}$
+
+(c) 微分方程式 $\frac{d^2x(t)}{dt^2} + 3\frac{dx(t)}{dt} + 2x(t) = 0$ を、初期条件 $x(0) = 1, \frac{dx(t)}{dt}|_{t=0} = 0$ の下で解きなさい.
+   *   $x(t)$ のラプラス変換を $X(s)$ とするとき、$\frac{dx(t)}{dt}$ のラプラス変換を $s$, $X(s)$, 初期値 $x(0)$ を用いて表しなさい.
+   *   与えられた微分方程式をラプラス変換を用いて、$X(s)$ についての代数方程式に変換しなさい.
+   *   この方程式を $X(s)$ について解くと、$X(s) = \frac{K_1}{s+1} + \frac{K_2}{s+2}$ となります。定数 $K_1$ と $K_2$ を求めなさい.
+   *   $x(t)$ を求めなさい.
+
+### 3. Z変換
+
+以下の問いに答えなさい：
+
+(a) $q(n) = \begin{cases} (0.6)^n & n \ge 0 \\ 0 & n < 0 \end{cases}$ のZ変換を求めなさい.
+
+(b) 次のシステムの伝達関数 $H(z) = \frac{Y(z)}{X(z)}$ を求めなさい。ここで、$X(z)$, $Y(z)$ はそれぞれ $x(n)$, $y(n)$ のZ変換であり、$y(n) = x(n) - 0.2y(n-1)$ です.
+    
+    ```
+    z^-1
+    +
+    -0.2
+    x(n) ---> y(n)
+    ```
+(c) このシステムに (a) の $q(n)$ を入力した場合の出力 $y(n)$ と、そのZ変換 $Y(z)$ を求めなさい.
+
+(d) 次の差分方程式を、$z$変換を用いて解きなさい:
+    *   $y(n) - 5y(n-1) + 6y(n-2) = 0$ 初期条件 $y(0) = 1, y(1) = 1$.
+    *   $y(n) - 4y(n-1) + 3y(n-2) = 2^n$, $n \ge 0$. 初期条件 $y(0) = 1, y(1) = 1$.
+
+(e) 次の信号のZ変換を求めよ:
+    *  $x(n) = \begin{cases} 1 & 0 \le n \le N-1 \\ 0 & \text{otherwise} \end{cases}$
+
+### 4. 離散フーリエ変換 (DFT)
+
+以下の問いに答えなさい:
+
+(a) $N=8$ の場合のDFT行列 $\mathbf{W}$ を書き下しなさい (行列の要素を $8 \times 8$ に並べて書く).
+(b) $N=8$ の場合に、$\frac{1}{8} \mathbf{W}^H \mathbf{W}$ が単位行列になることを確認しなさい.
+(c) $N=8$ とする。$\mathbf{x} =^T$ のDFTを求めなさい.
+(d) $x_n$ のDFTを $X_k$ とするとき、$y_n = x_{(n-\tau) \mod N}$ のDFTを $X_k$ を用いて表しなさい。ただし、$\tau$ は整数であり、$a \mod N$ は $a$ を $N$ で割った余りを表します.
+(e) 信号 $x_n$ と $h_n$ の巡回畳み込みを定義し、そのDFTが $X_k H_k$ で表されることを説明しなさい. また、通常の畳み込みとの違いを説明しなさい.
+(f) 2次元DFTの定義を述べ、1次元のDFTとの違いを説明しなさい.
+(g) 高速フーリエ変換(FFT)の基本的な考え方を説明し、DFTと比較して計算量がどのように削減されるかを説明しなさい.
+
+### 5. 信号とシステム一般
+
+以下の問いに答えなさい：
+
+(a) 線形時不変システム (LTIシステム) について、定義を説明し、その入出力関係が畳み込みで表される理由を説明しなさい.
+(b) インパルス応答とは何かを説明し、LTIシステムにおいてインパルス応答が重要な理由を説明しなさい.
+(c) Diracのデルタ関数 $\delta(t)$ の定義と性質を説明し、そのフーリエ変換を求めなさい.
+(d) 連続時間信号の標本化（サンプリング）について、標本化定理の内容を説明し、エイリアシングが起こる原因とその対策について説明しなさい.
+(e) 離散時間信号のフーリエ変換（DTFT）とZ変換の関係について説明しなさい.
+(f) ギブス現象について説明しなさい.
+
+## 解答
+
+### 1. フーリエ変換
+
+(a) 証明はを参照してください.
+
+(b)
+*  (b-1) $X(\omega) = \frac{2}{\omega}\left[\sin\left(\frac{\omega T}{4}\right) - \sin\left(\frac{\omega T}{2}\right)\right]$
+*  (b-2) $X(\omega) = \frac{j}{2}\left[\frac{e^{-j(\omega - \omega_0)T/2}}{\omega - \omega_0} + \frac{e^{j(\omega - \omega_0)T/2}}{\omega - \omega_0} - \frac{e^{-j(\omega + \omega_0)T/2}}{\omega + \omega_0} - \frac{e^{j(\omega + \omega_0)T/2}}{\omega + \omega_0}\right]$
+*   (b-3) $X(\omega) = \frac{T}{\omega} \cos\left(\frac{\omega T}{2}\right) - \frac{2}{\omega^2} \sin\left(\frac{\omega T}{2}\right)$
+
+### 2. ラプラス変換
+
+(a)
+    *   $X_1(s) = \frac{1}{s+a}$
+    *  $X_2(s) = \frac{1-e^{-sT}}{s}$
+    *  $X_3(s) = \frac{1}{s^2} + \frac{e^{-s}}{s^2} - \frac{e^{-s}}{s}$
+(b)
+    *   $\frac{1}{s} - \frac{1}{s+3}$ 
+    *   $u(t-T)$
+(c)
+    *   $sX(s) - x(0) = sX(s) - 1$
+    *   $s^2X(s) - sx(0) - x'(0) + 3(sX(s) - x(0)) + 2X(s) = 0$ よって、$(s^2 + 3s + 2)X(s) - s - 3 = 0$ ゆえに、$X(s) = \frac{s+3}{s^2 + 3s + 2}$
+    *   $X(s) = \frac{2}{s+1} - \frac{1}{s+2}$
+    *   $x(t) = 2e^{-t} - e^{-2t}$
+
+### 3. Z変換
+
+(a) $\frac{1}{1 - 0.6z^{-1}}$
+
+(b)  $H(z) = \frac{1}{1 + 0.2z^{-1}}$
+
+(c) $Y(z) = \frac{1}{(1-0.6z^{-1})(1+0.2z^{-1})}$. 部分分数分解すると、 $Y(z) = \frac{1.25}{1-0.6z^{-1}} - \frac{0.25}{1+0.2z^{-1}}$. ゆえに、 $y(n) = 1.25(0.6)^n - 0.25(-0.2)^n, n\ge0$
+
+(d)
+    *   $Y(z) = \frac{z}{z-2} - \frac{z}{z-3} = 3(2^n) - 2(3^n)$
+    *   $Y(z) = \frac{2z^2}{(z-2)(z-1)(z-3)}$. 部分分数展開して、$Y(z) = -\frac{2}{z-1} - \frac{2}{z-2} + \frac{4}{z-3}$, これを逆変換すると、$y(n) = -2 - 2(2^n) + 4(3^n)$
+
+(e) $X(z) = \frac{1-z^{-N}}{1-z^{-1}}$
+
+### 4. 離散フーリエ変換 (DFT)
+
+(a) を参照してください。
+
+(b) を参照してください。
+
+(c)  $X_k = 1$ for all k.
+
+(d) $Y_k = X_k e^{-j \frac{2\pi}{N}k\tau}$.
+
+(e) 巡回畳み込みは、$x \circledast h = \sum_{l=0}^{N-1} x_l h_{(n-l) \mod N}$ で定義されます。そのDFTは $X_k H_k$ で表されます。通常の畳み込みは、信号の長さが長くなるのに対し、巡回畳み込みは信号の長さを維持します。
+
+(f) 2次元DFTは、2次元の信号(画像など)に対して適用されるDFTであり、以下のように定義されます:
+  $F(k_x, k_y) = \sum_{x=0}^{N-1} \sum_{y=0}^{M-1} f(x, y) e^{-j2\pi (\frac{x k_x}{N} + \frac{y k_y}{M})}$
+    1次元DFTは時間信号に対する変換であるのに対し、2次元DFTは空間信号に対する変換であり、周波数の代わりに波数という概念が用いられます.
+
+(g) FFTは、DFTの計算を高速化するためのアルゴリズムであり、信号を偶数番目と奇数番目に分割して計算量を削減します。DFTの計算量が$N^2$であるのに対し、FFTの計算量は$N \log_2 N$ となります.
+
+### 5. 信号とシステム一般
+
+(a) 線形時不変システムとは、線形性と時不変性を満たすシステムのことです。線形性とは、入力の線形結合に対する出力が、それぞれの入力に対する出力の線形結合となる性質です。時不変性とは、入力信号を時間シフトさせたときに、出力信号も同じ時間シフトとなる性質です。これらの性質から、LTIシステムの出力は、入力信号とインパルス応答の畳み込みで表すことができます.
+
+(b) インパルス応答とは、システムにインパルス信号（デルタ関数）を入力したときの出力のことです。LTIシステムでは、任意の入力信号に対する出力は、入力信号とインパルス応答の畳み込みで表せるため、インパルス応答はシステムの特性を表す重要な要素となります.
+
+(c) Diracのデルタ関数 $\delta(t)$ は、以下の性質を持つ超関数です:
+    *   $\delta(t) = 0$ for $t \neq 0$
+    *   $\int_{-\infty}^{\infty} \delta(t) dt = 1$
+    *   $\int_{-\infty}^{\infty} x(t) \delta(t - t_0) dt = x(t_0)$
+    *   $\mathcal{F}[\delta(t)] = 1$.
+
+(d) 連続時間信号の標本化とは、連続時間信号を一定間隔で離散的にサンプリングする操作です。標本化定理によれば、帯域制限された信号は、その最大周波数の2倍以上の周波数でサンプリングすると、元の信号を完全に復元できます。サンプリング周波数が不足すると、高周波成分が低周波成分に重なって現れるエイリアシングが発生します.
+
+(e) 離散時間信号のフーリエ変換 (DTFT) は、離散時間信号を周波数領域で表現するための変換であり、$X(\omega) = \sum_{n=-\infty}^{\infty} x[n] e^{-j \omega n}$ で定義されます。Z変換は、DTFTを一般化したもので、$X(z) = \sum_{n=-\infty}^{\infty} x[n] z^{-n}$ で定義されます。DTFTは、Z変換において $z=e^{j\omega}$ とした場合の特殊なケースと考えることができます.
+
+(f) ギブス現象とは、不連続な信号をフーリエ級数で近似するときに、不連続点の周辺で過渡的な振動が発生する現象のことです.
+
+以上が定期試験の予想問題と解答です。
+
 \end{document}
