レポート完成

--- a/Finance/main.tex
+++ b/Finance/main.tex
@@ -4,7 +4,7 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{float}
-
+\usepackage{url}
 
 % 1ページあたり40文字×40行の設定
 \renewcommand{\baselinestretch}{1.0}
@@ -14,13 +14,15 @@
 \begin{document}
 
 \title{Schoo株式会社の財務分析と企業価値評価}
-\author{平野健汰}
+\author{1TE23035E 平野健汰}
 \date{\today}
 
 \maketitle
 
 \section{はじめに}
-% 分析の目的と概要
+株式会社Schooを対象に，財務諸表分析と企業価値評価を行う．
+財務諸表分析は同時期に上場したタイミーと比較して財務指標と戦略について評価する．
+企業価値評価はDCFモデルとDDモデルを用いて株価を算定し，公募価格，初値について評価する．
 
 \section{企業概要}
 株式会社Schooは「世の中から卒業をなくす」をミッションに，オンラインでの社会人教育に取り組んできた．
@@ -41,8 +43,6 @@ ROE &= 売上高利益率 \times 総資本回転率 \times 財務レバレッジ
 ROE &= \frac{当期純利益}{売上高} \times \frac{売上高}{総資本} \times \frac{総資本}{自己資本}
 \end{align*}
 
-これをもとに2023年10月から2024年9月までのROEを計算する．
-
 2022年10月から2023年9月までのROEを計算すると以下のように求められた．
 
 \[
@@ -61,7 +61,7 @@ ROE = -\frac{680,386}{165,499} = -4.110
 財務レバレッジ率 = \frac{2,098,296}{165,499} = 12.682
 \]
 
-財務諸表より，それぞれ以下のように求められた．
+これをもとに2023年10月から2024年9月までのROEを計算する．
 
 \[
 ROE = \frac{184,387}{694,879} = 0.265
@@ -139,7 +139,7 @@ Schoo株式会社は，売上高利益率が低く，総資本回転率が高く
 一方，タイミーは，売上高利益率が高く，総資本回転率が低く，財務レバレッジ率が低い．
 
 \subsection{戦略評価}
-Schooは，前節の分析から，積極的にとうしを行い，効率的に売り上げをあげているものの，利益を十分に確保できていないことが考えられる．
+Schooは，前節の分析から，積極的に投資を行い，効率的に売り上げをあげているものの，利益を十分に確保できていないことが考えられる．
 決算説明資料より，事業戦略として「社会人教育の第一想起」を獲得することを目指し，国内社会人教育市場のNo.1を目指すとしている．
 また，リカーリング収益モデルを採用しており，これは契約の継続の維持・向上が重要である．
 
@@ -154,10 +154,21 @@ Schooは，前節の分析から，積極的にとうしを行い，効率的に
 
 \section{企業価値評価}
 \subsection{DCFモデルによる評価}
+DCFモデルで企業価値評価を行う．
+DCFモデルは，企業の将来のフリーキャッシュフロー(FCF)を割引して現在価値を求めるモデルである．
+モデルを利用するにあたって，次の仮説を設定する．
+株主資本コストは8\%とする．
+法人税は30\%とする．
+FCFの成長率は1年目から2年目まで40\%, 3年目から5年目まで30\%, 6年目以降は5\%とする．
+
 
 \[
-企業価値 = \frac{FCF_1}{1 + r} + \frac{FCF_2}{(1 + r)^2} + \cdots + \frac{FCF_n}{(1 + r)^n}
+DCFモデルの企業価値 = \frac{FCF_1}{1 + r} + \frac{FCF_2}{(1 + r)^2} + \cdots + \frac{FCF_n}{(1 + r)^n}
 = \sum_{t=1}^{n} \frac{FCF_t}{(1 + r)^t}
+\]
+
+\[
+DCFモデルの企業価値 = \sum_{t=1}^{5} {FCFの現在価値} + \frac{6年目のFCF}{WACC}
 \]
 
 \[
@@ -177,32 +188,105 @@ Schooは，前節の分析から，積極的にとうしを行い，効率的に
       負債コスト & 2.78\% & 2.78\% & 2.78\% & 2.78\% & 2.78\% & 2.78\% & 2.78\% \\ \hline
       自己資本比率 & 26.91\% & 26.91\% & 26.91\% & 26.91\% & 26.91\% & 26.91\% & 26.91\% \\ \hline
       WACC &  & 3.58 & 3.58 & 3.58 & 3.58 & 3.58 & 3.58 \\ \hline
-      FCFの現在価値 &  & 128,905 & 172,230 & 218,670 & 274,447 & 361,673 & \\ \hline
+      FCFの現在価値 &  & 128,905 & 172,230 & 218,670 & 274,447 & 361,673 & 12,045,167 \\ \hline
     \end{tabular}
   \end{center}
 \end{table}
 
-\[
-企業価値 = \sum_{t=1}^{5} {FCFの現在価値} + \frac{6年目のFCF}{WACC}
-\]
+\begin{table}
+  \begin{center}
+    \caption{企業価値評価}
+    \begin{tabular}{|c|c|} \hline
+      FCVのPV合計 & 13,201,092 \\ \hline
+      純資産（時価）& 11,435,652 \\ \hline
+      発行済株数 & 12,422,700 \\ \hline
+      株価 & 920.54 \\ \hline
+    \end{tabular}
+  \end{center}
+\end{table}
+
 
 \subsection{DDモデルによる評価}
-% 配当割引モデルによる株価算定
+DDモデルで企業価値評価を行う．
+モデルを利用するにあたって，以下の仮説を設定する．
+売上の成長率は1年目から2年目まで40\%, 3年目から5年目まで30\%, 6年目以降は5\%とする．
+配当性向は30\%とする．
+株主資本コストは8\%とする．
+
+\[
+DD法での株式価値 = \sum_{t=1}^{5} {t年目の配当額} + \frac{6年目の配当額}{株主資本コスト}
+\]
+
+\begin{table}[H]
+  \begin{center}
+    \caption{DDモデルによる株価算定}
+    \begin{tabular}{|c|c|c|c|c|c|c|c|} \hline
+      年度 & 2024(当期) & 2025 & 2026 & 2027 & 2028 & 2029 & その後の成長 \\ \hline
+      売上高 & 2,852,780 & 3,993,892 & 5,591,448 & 7,268,883 & 9,449,548 & 12,284,413 & 12,898,633 \\ \hline
+      売上の成長率 &  & 40.0\% & 40.0\% & 30.0\% & 30.0\% & 30.0\% & 5.0\% \\ \hline
+      税引後利益 & 184,387 & 258,005 & 361,207 & 469,569 & 610,440 & 793,573 & 833,251 \\ \hline
+      売上当期利益率 & 6.46\% & 6.46\% & 6.46\% & 6.46\% & 6.46\% & 6.46\% & 6.46\% \\ \hline
+      配当性向 &  & 30\% & 30\% & 30\% & 30\% & 30\% & 30\% \\ \hline
+      配当額 &  & 77,401 & 108,362 & 140,870 & 183,131 & 238,071 & 249,975 \\ \hline
+      株主資本コスト &  & 8\% & 8\% & 8\% & 8\% & 8\% & 8\% \\ \hline
+      配当の現在価値 &  & 71,208 & 99,692 & 129,600 & 168,480 & 219,024 & 3,124,687 \\ \hline
+    \end{tabular}
+  \end{center}
+\end{table}
+
+\begin{table}[H]
+  \begin{center}
+    \caption{DDモデルによる株価算定}
+    \begin{tabular}{|c|c|} \hline
+      配当のPV合計 & 3,815,691 \\ \hline
+      発行済株数 & 12,422,700 \\ \hline
+      株価 & 307.00 \\ \hline
+    \end{tabular}
+  \end{center}
+\end{table}
 \subsection{公開価格と初値の評価}
-% 算定された理論株価と実際の株価との比較
+まず，DCFモデル，DDモデルの計算に利用した仮説で結果に大きく影響すると考えられるものを以下に示す．
+\begin{itemize}
+  \item FCFの成長率
+  \item 株主資本コスト
+  \item 配当性向
+\end{itemize}
 
-\section{結論}
-% 分析結果のまとめと今後の展望
+成長率は，企業の将来の成長性を示す指標であり，これが高いほど企業価値が高くなる．
+成長率は時間経過とともに低下すると考えられる．
+また，成長率は業界の動向や企業の戦略によって変化する．
+競合他社を考えてみると，UdemyやCourseraなどが挙げられる．
+ただ，これらは海外企業であり，日本国内での競合他社は少ないと考える．
+以上の内容より，設定した仮説は妥当であると考えられる．
 
-\appendix
-\section{財務データ}
-% 詳細な財務データの表
+株主資本コストは，株式での資金調達に必要なコストであり，これが高いほど企業価値が低くなる．
+今回は，8\%と設定したが，これは一般的な株主資本コストである．
+ただ，株主資本コストは企業の信用度や市場の状況によって変化する．
+また，株主資本コストは，企業の業績や将来の成長性によっても変化する．
+以上の内容より，設定した仮説は妥当であると考えられる．
 
-\section{評価モデルの前提条件}
-% DCFモデルとDDモデルの計算前提
+配当性向は，企業の利益を株主に還元する割合を示す指標である．
+今回は，30\%と設定したが，これは一般的な配当性向である．
+ただ，配当性向は企業の業績や将来の成長性によって変化する．
+以上の内容より，設定した仮説は妥当であると考えられる．
+
+以上の内容から，DCFモデル，DDモデルの計算に利用した仮説は妥当であると考えられる．
+
+株価の評価を行う．
+DCFモデルによる株価は920.54円，DDモデルによる株価は307.00円であった．
+公募価格は690円であり，初値は761円であった．
+DCFモデルによる株価は公募価格よりも高く，初値よりも高い．
+DDモデルによる株価は公募価格よりも低く，初値よりも低い．
+以上の結果から，DCFモデルによる株価は過大評価であり，DDモデルによる株価は過小評価であると考えられる．
+今回，DDモデルの結果が市場評価と大きく乖離している．
+これは，DDモデルの仮説が妥当でないことが考えられる．
+具体的には，売上成長率が低い，配当性向が低いことが考えられる．
 
 \begin{thebibliography}{9}
-\bibitem{reference1} 参考文献
+\bibitem{Schoo_SecuritiesReport} Schooの有価証券報告書 \url{https://ssl4.eir-parts.net/doc/264A/yuho_pdf/S100V0PZ/00.pdf}
+\bibitem{Schoo_FinancialResultsBriefingReport} Schooの決算説明資料 \url{https://ssl4.eir-parts.net/doc/264A/ir_material_for_fiscal_ym/167570/00.pdf}
+\bibitem{Timee_SecuritiesReport} Timeeの有価証券報告書 \url{https://corp.timee.co.jp/ir/securities/}
+\bibitem{Timee_FinancialResultsBriefingReport} Timeeの決算説明資料 \url{https://corp.timee.co.jp/ir/presentations/}
 \end{thebibliography}
 
 \end{document}
